Added JFreeChart as the drawing library and modified the code accordingly.