@@ -1,49 +1,48 @@
 package lcsb.vizbin.service.utils;
 
-import java.awt.geom.Point2D;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
-import java.util.List;
 
 import javax.swing.JFrame;
 import javax.swing.JLabel;
 import javax.swing.JOptionPane;
 import javax.swing.JProgressBar;
-import javax.swing.SwingUtilities;
 
 import lcsb.vizbin.InvalidArgumentException;
 import lcsb.vizbin.UnhandledOSException;
 import lcsb.vizbin.data.DataSet;
 import lcsb.vizbin.data.Sequence;
 import lcsb.vizbin.service.DataSetFactory;
+import lcsb.vizbin.service.utils.pca.IPrincipleComponentAnalysis;
+import lcsb.vizbin.service.utils.pca.PrincipleComponentAnalysisEJML;
+import lcsb.vizbin.service.utils.pca.PrincipleComponentAnalysisMtj;
+import no.uib.cipr.matrix.NotConvergedException;
 
 import org.apache.log4j.Logger;
 
 public class DataSetUtils {
-	static Logger logger = Logger.getLogger(DataSetUtils.class);
+	static Logger						logger						= Logger.getLogger(DataSetUtils.class);
 
-	static String tsneComand = "./bh_tsne";
+	static String						tsneComand				= "./bh_tsne";
 
-	static Integer usedVal[][] = new Integer[256][];
+	static Integer					usedVal[][]				= new Integer[256][];
 
-	static int alphabetSize = 4;
+	static int							alphabetSize			= 4;
 
-	static boolean isDataSetCreated = false;
+	static boolean					isDataSetCreated	= false;
 
-	private static DataSet dataSet = null;
-	
-	// Tomasz Sternal - communication between DataSetUtils and ClusterPannel about pointList
-	// and polygonPoints is completely unnecessary 
+	private static DataSet	dataSet						= null;
+
+	// Tomasz Sternal - communication between DataSetUtils and ClusterPannel about
+	// pointList
+	// and polygonPoints is completely unnecessary
 	// private static ArrayList<Sequence> pointList = null;
 	// private static List<Point2D> polygonPoints = null;
-	private static JFrame drawingFrame = null;
-	
-	public static void createKmers(DataSet dataSet, int k, boolean mergeRevComp)
-			throws InvalidArgumentException {
+	private static JFrame		drawingFrame			= null;
+
+	public static void createKmers(DataSet dataSet, int k, boolean mergeRevComp) throws InvalidArgumentException {
 		int totalKmers = 0;
 		Integer totalKmersIgnored = 0;
 		for (Sequence sequence : dataSet.getSequences()) {
@@ -56,18 +55,9 @@ public class DataSetUtils {
 			}
 		}
 		if (totalKmersIgnored > 0) {
-			JOptionPane
-					.showMessageDialog(
-							null,
-							"Total number of kmers: "
-									+ totalKmers
-									+ ".\n"
-									+ totalKmersIgnored
-									+ " ("
-									+ Math.round(totalKmersIgnored * 10000.0
-											/ totalKmers)
-									/ 100.0
-									+ "%) kmers ignored since containing unknown letters.");
+			JOptionPane.showMessageDialog(
+					null, "Total number of kmers: " + totalKmers + ".\n" + totalKmersIgnored + " (" + Math.round(totalKmersIgnored * 10000.0 / totalKmers) / 100.0
+							+ "%) kmers ignored since containing unknown letters.");
 		}
 	}
 
@@ -88,37 +78,35 @@ public class DataSetUtils {
 	private static int getRevVal(int val, int k) {
 		int result = 0;
 		for (int i = 0; i < k; i++) {
-			result = result * alphabetSize
-					+ (alphabetSize - 1 - val % alphabetSize);
+			result = result * alphabetSize + (alphabetSize - 1 - val % alphabetSize);
 			val = val / alphabetSize;
 		}
 		return result;
 	}
 
 	/*
-	 * Returns number of occurrences of every type of k-mers, and counts number
-	 * of k-mers that will be ingored.
+	 * Returns number of occurrences of every type of k-mers, and counts number of
+	 * k-mers that will be ingored.
 	 * 
-	 * k-mers are considered words in 4-base system. For example: CGTA =
-	 * 1230_(4)= 1*64 + 2*16 + 3*4 + 0*1 = 108 (dec)
+	 * k-mers are considered words in 4-base system. For example: CGTA = 1230_(4)=
+	 * 1*64 + 2*16 + 3*4 + 0*1 = 108 (dec)
 	 * 
 	 * @param sequence - currently analyzed sequence
 	 * 
 	 * @param k - number of nucleotides in one k-mer
 	 * 
-	 * @mergeRevComp - determines whether all sequences counts will be returned
-	 * or only those that appeared at lest once
+	 * @mergeRevComp - determines whether all sequences counts will be returned or
+	 * only those that appeared at lest once
 	 * 
 	 * @kmersRemoved Number of k-mers containing unknown letters
 	 */
-	public static kmersResult createKmers(Sequence sequence, int k,
-			boolean mergeRevComp, Integer kmersRemoved) throws InvalidArgumentException {
+	public static kmersResult createKmers(Sequence sequence, int k, boolean mergeRevComp, Integer kmersRemoved) throws InvalidArgumentException {
 		if (usedVal[k] == null) {
 			createMergedKmerTabl(k);
 		}
-		
+
 		int maxVal = (int) Math.pow(alphabetSize, k);
-		
+
 		Integer[] result = new Integer[maxVal];
 		for (int i = 0; i < maxVal; i++) {
 			if (mergeRevComp) {
@@ -133,8 +121,7 @@ public class DataSetUtils {
 
 		for (int i = 0; i < dnaSequence.length(); i++) {
 			try {
-				val = (val * alphabetSize + nucleotideVal(dnaSequence.charAt(i)))
-						% maxVal;
+				val = (val * alphabetSize + nucleotideVal(dnaSequence.charAt(i))) % maxVal;
 			} catch (InvalidArgumentException e) {
 				lastUnknownLetterPos = i;
 				val = 0;
@@ -177,27 +164,26 @@ public class DataSetUtils {
 		}
 	}
 
-	private static int nucleotideVal(char charAt)
-			throws InvalidArgumentException {
+	private static int nucleotideVal(char charAt) throws InvalidArgumentException {
 		switch (charAt) {
-		case ('A'):
-			return 0;
-		case ('C'):
-			return 1;
-		case ('G'):
-			return 2;
-		case ('T'):
-			return 3;
-		case ('a'):
-			return 0;
-		case ('c'):
-			return 1;
-		case ('g'):
-			return 2;
-		case ('t'):
-			return 3;
-		default:
-			throw new InvalidArgumentException("Invalid nucleotide: " + charAt);
+			case ('A'):
+				return 0;
+			case ('C'):
+				return 1;
+			case ('G'):
+				return 2;
+			case ('T'):
+				return 3;
+			case ('a'):
+				return 0;
+			case ('c'):
+				return 1;
+			case ('g'):
+				return 2;
+			case ('t'):
+				return 3;
+			default:
+				throw new InvalidArgumentException("Invalid nucleotide: " + charAt);
 		}
 	}
 
@@ -238,38 +224,48 @@ public class DataSetUtils {
 		for (Sequence sequence : dataSet.getSequences()) {
 			double clrVector[] = new double[vectorLength];
 			for (int i = 0; i < vectorLength; i++)
-				clrVector[i] = Math.log(sequence.getDescVector()[i])
-						- meanLn[i];
+				clrVector[i] = Math.log(sequence.getDescVector()[i]) - meanLn[i];
 			sequence.setClrVector(clrVector);
 		}
 
 	}
 
-	public static void computePca(DataSet dataSet, int columns) {
-		PrincipleComponentAnalysis pca = new PrincipleComponentAnalysis();
-		pca.setup(dataSet.getSequences().size(), dataSet.getSequences().get(0)
-				.getClrVector().length);
+	public static void computePca(DataSet dataSet, int columns, PcaType pcaType) throws InvalidArgumentException {
+		IPrincipleComponentAnalysis pca = null;
+		if (pcaType.equals(PcaType.MTJ) || pcaType.equals(PcaType.MTJ_OPTIMIZED)) {
+			pca = new PrincipleComponentAnalysisMtj();
+		} else if (pcaType.equals(PcaType.EJML)) {
+			pca = new PrincipleComponentAnalysisEJML();
+		} else {
+			throw new InvalidArgumentException("Unknown pca type: " + pcaType);
+		}
+
+		pca.setup(dataSet.getSequences().size(), dataSet.getSequences().get(0).getClrVector().length);
 		for (Sequence sequence : dataSet.getSequences()) {
 			pca.addSample(sequence.getClrVector());
 		}
-		pca.computeBasis(columns);
-		for (Sequence sequence : dataSet.getSequences()) {
-			sequence.setPcaVector(pca.sampleToEigenSpace(sequence
-					.getClrVector()));
+		try {
+			pca.computeBasis(columns);
+		} catch (NotConvergedException e) {
+			throw new InvalidArgumentException(e);
+		}
+		if (pcaType.equals(PcaType.MTJ_OPTIMIZED)) {
+			for (int i = 0; i < dataSet.getSequences().size(); i++) {
+				dataSet.getSequences().get(i).setPcaVector(pca.sampleToEigenSpace(i));
+			}
+		} else {
+			for (Sequence sequence : dataSet.getSequences()) {
+				sequence.setPcaVector(pca.sampleToEigenSpace(sequence.getClrVector()));
+			}
 		}
 	}
 
-	public static void runTsneAndPutResultsToDir(DataSet dataSet,
-			int numThreads, String dir, double theta, double perplexity,
-			int seed, JLabel label_status, JProgressBar progBar, File tsneCmd)
-			throws UnhandledOSException, IOException, InterruptedException {
+	public static void runTsneAndPutResultsToDir(DataSet dataSet, int numThreads, String dir, double theta, double perplexity, int seed, JLabel label_status,
+			JProgressBar progBar, File tsneCmd) throws UnhandledOSException, IOException, InterruptedException {
 
-		DataSetFactory.saveToPcaFile(dataSet, dir + "/data.dat", numThreads,
-				theta, perplexity, seed);
+		DataSetFactory.saveToPcaFile(dataSet, dir + "/data.dat", numThreads, theta, perplexity, seed);
 
-		logger.debug("Running command: \"" + tsneCmd + "\" in directory: "
-				+ dir + "\n" + "Number of threads: " + numThreads + "\n"
-				+ "Seed: " + seed);
+		logger.debug("Running command: \"" + tsneCmd + "\" in directory: " + dir + "\n" + "Number of threads: " + numThreads + "\n" + "Seed: " + seed);
 
 		TSNERunner tsne = new TSNERunner(tsneCmd, dir, label_status, progBar);
 		Thread tr = new Thread(tsne, "TSNERunner");
@@ -278,13 +274,12 @@ public class DataSetUtils {
 	}
 
 	static class TSNERunner implements Runnable {
-		private File command;
-		private String dir;
-		private JLabel label_status;
-		private JProgressBar progBar;
+		private File					command;
+		private String				dir;
+		private JLabel				label_status;
+		private JProgressBar	progBar;
 
-		public TSNERunner(File _command, String _dir, JLabel _status,
-				JProgressBar _progBar) {
+		public TSNERunner(File _command, String _dir, JLabel _status, JProgressBar _progBar) {
 			command = _command;
 			dir = _dir;
 			label_status = _status;
@@ -294,19 +289,15 @@ public class DataSetUtils {
 		public void run() {
 			Process process;
 			try {
-				process = Runtime.getRuntime().exec(
-						new String[] { command.getAbsolutePath() },
-						new String[] {}, new File(dir));
+				process = Runtime.getRuntime().exec(new String[] { command.getAbsolutePath() }, new String[] {}, new File(dir));
 				/*
-				 * Tomasz Sternal - removed this line, it was not updating
-				 * progress bar status in mainFrame in real time
+				 * Tomasz Sternal - removed this line, it was not updating progress bar
+				 * status in mainFrame in real time
 				 * 
 				 * SwingUtilities.invokeAndWait(new
-				 * ProgressReader(process.getInputStream(), label_status,
-				 * progBar));
+				 * ProgressReader(process.getInputStream(), label_status, progBar));
 				 */
-				BufferedReader reader = new BufferedReader(
-						new InputStreamReader(process.getInputStream()));
+				BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
 				String line = reader.readLine();
 				Integer newProgress = 0;
 				while (line != null) {
@@ -319,11 +310,9 @@ public class DataSetUtils {
 					if (line.startsWith("Learning embedding"))
 						newProgress = 5; // 45%
 					if (line.startsWith("Iteration")) { // there are 20
-														// iterations
+						// iterations
 						newProgress = 2; // add 2% progress per iteration
-						label_status.setText("T-SNE: "
-								+ line.substring(0, line.indexOf(':'))
-								+ "/1000");
+						label_status.setText("T-SNE: " + line.substring(0, line.indexOf(':')) + "/1000");
 					}
 					if (line.contains("Wrote the"))
 						newProgress = 5; // 90%
@@ -337,7 +326,7 @@ public class DataSetUtils {
 			}
 		}
 	}
-	
+
 	/*
 	 * Tomasz Sternal - removed this class, not updating window status in real
 	 * time
@@ -395,24 +384,25 @@ public class DataSetUtils {
 	public static void setDataSet(DataSet dataSet) {
 		DataSetUtils.dataSet = dataSet;
 	}
-	
-// Tomasz Sternal - communication between DataSetUtils and ClusterPannel about pointList
-//	and polygonPoints is completely unnecessary 
-//	public static ArrayList<Sequence> getPointList() {
-//		return pointList;
-//	}
-//
-//	public static void setPointList(ArrayList<Sequence> pointList) {
-//		DataSetUtils.pointList = pointList;
-//	}
-//
-//	public static List<Point2D> getPolygonPoints() {
-//		return polygonPoints;
-//	}
-//
-//	public static void setPolygonPoints(List<Point2D> polygonPoints) {
-//		DataSetUtils.polygonPoints = polygonPoints;
-//	}
+
+	// Tomasz Sternal - communication between DataSetUtils and ClusterPannel about
+	// pointList
+	// and polygonPoints is completely unnecessary
+	// public static ArrayList<Sequence> getPointList() {
+	// return pointList;
+	// }
+	//
+	// public static void setPointList(ArrayList<Sequence> pointList) {
+	// DataSetUtils.pointList = pointList;
+	// }
+	//
+	// public static List<Point2D> getPolygonPoints() {
+	// return polygonPoints;
+	// }
+	//
+	// public static void setPolygonPoints(List<Point2D> polygonPoints) {
+	// DataSetUtils.polygonPoints = polygonPoints;
+	// }
 
 	public static JFrame getDrawingFrame() {
 		return drawingFrame;
